// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Literals Array of literals 1`] = `
"FROM:
type Test = [1, 2, 3, \\"hello\\", \\"world\\"];

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.TupleType([
      _runtime.default.Literal(1),
      _runtime.default.Literal(2),
      _runtime.default.Literal(3),
      _runtime.default.Literal('hello'),
      _runtime.default.Literal('world'),
    ]);

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;

exports[`Literals Booleans 1`] = `
"FROM:
type Test = true;

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.Literal(true);

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;

exports[`Literals Booleans 2`] = `
"FROM:
type Test = false;

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.Literal(false);

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;

exports[`Literals Numbers 1`] = `
"FROM:
type Test = 1;

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.Literal(1);

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;

exports[`Literals Strings 1`] = `
"FROM:
type Test = \\"test\\";

--------------------------------------------------------
TO:
'use strict';

var _flowtypeHelpers = _interopRequireDefault(
  require('@manta-style/flowtype-helpers'),
);

var _runtime = _interopRequireDefault(require('@manta-style/runtime'));

function _interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : { default: obj };
}

var Test = _runtime.default.TypeAliasDeclaration(
  'Test',
  function(typeFactory) {
    var type = _runtime.default.Literal('test');

    return type;
  },
  _runtime.default.MantaAnnotation(undefined),
);
"
`;
